[gd_scene load_steps=2 format=3 uid="uid://d03mrsttku5f6"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_ht2t0"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ht2t0")

[node name="bgd" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="bgd"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="bgd/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="BtnCreateDeck" type="Button" parent="bgd/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Create Deck"

[node name="BtnViewDecks" type="Button" parent="bgd/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "View Decks"

[node name="BtnStudy" type="Button" parent="bgd/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Study
"

[node name="BtnSettings" type="Button" parent="bgd/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Settings
"

[connection signal="pressed" from="bgd/MarginContainer/HBoxContainer/BtnCreateDeck" to="." method="_on_btn_create_deck_pressed"]
[connection signal="pressed" from="bgd/MarginContainer/HBoxContainer/BtnViewDecks" to="." method="_on_btn_view_decks_pressed"]
[connection signal="pressed" from="bgd/MarginContainer/HBoxContainer/BtnStudy" to="." method="_on_btn_study_pressed"]
[connection signal="pressed" from="bgd/MarginContainer/HBoxContainer/BtnSettings" to="." method="_on_btn_settings_pressed"]
