extends Control



func _on_btn_create_deck_pressed() -> void:
	get_tree().change_scene_to_file("res://create_deck.tscn")


func _on_btn_study_pressed() -> void:
	pass # Replace with function body.


func _on_btn_settings_pressed() -> void:
	pass # Replace with function body.


func _on_btn_view_decks_pressed() -> void:
	pass # Replace with function body.
